[package]
name = "canada"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.9.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.6.5"
regex = "1.3.4"
futures = { version = "0.3.3", features = ["thread-pool"]}
surf = "1.0.3"
openssl = { version = "0.10", features = ["vendored"] }

[lib]
doctest = false
test = true
